--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,46 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  background-color: #eff3f8;
+  font-family: var(--font-family);
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  color: #495057;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.flex.hoveredperfil Button,
+.flex.hoveredperfil .text-xs {
+  color: #66FF66 !important;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.flex.hoveredClose Button,
+.flex.hoveredClose .text-xs {
+  color: #66FF66 !important; 
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+@media (min-width: 992px) {
+  .layInit {
+      margin-left: 300px;
   }
 }
+
+@media (max-width: 992px) {
+  .layout_modulos {
+      display: none !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .layout_menu {
+      display: none !important;
+  }
+}
+
+
+.p-button.p-fileupload-choose {
+  font-size: 1.25rem;
+}
+
